
CHANGELOG

for libalf, libAMoRE (local branch for libAMoRE++), libAMoRE++,
liblangen, libmVCA and finite-automata-tools.

all those tools are released together and share their
version numbers until further notice.



HEAD (today)
------------

- libAMoRE++: consider epsilon-transitions in finite_automaton::negative_sink()
	this fixes recognition of non-sink-states as sink-states in visualize().


v0.3   (2011-04-08 17:00:00)
----------------------------
svn-revision 1490

- Better install routines and versioning of objects
- Compilation on Windows improved
- A lot of cleanup and bugfixes
- All libraries: try to use better style to avoid cluttering namespace and other
	library-related problems. this includes:
	- avoiding "using namespace std" in headers
	- checking/removing all warnings that occur
	- serialization framework
	- regular memory profiling, including for leaks
	- if possible, use <const_iterator>s instead of <iterator>s
	- using const keyword for functions that don't change anything
- libalf: refactor of conjectures
- libalf: New (generic) statistic type
- libalf: New algorithm Rivest&Schapire (Angluin L* variant)
- libalf: Extended algorithms to support learning of mealy-machines,
	not just finite automata:
	- angluin_simple_table
	- angluin_col_table
	- rivest_schapire_table
	- biermann_original
- libalf: Critical bug in Kearns&Vazirani algorithm fixed
- libalf: introduced an example answer-type for learning mealy-machines
	in answer.h: class fixed_count_answer.
	however, in simple cases, one can also use int or char.
- libAMoRE++: Bug fixed that made antichains fail for deterministic automata
- libAMoRE++: added regex functions for finite_automata.
- libAMoRE: automatically include vars required by libAMoRE that were defined in vars.h
- finite automata tools: new output "regex".



v0.2   (2010-04-18 21:11:33)
----------------------------
svn-revision 1310

not noted.

v0.1a  (2010-02-04 16:06:08)
----------------------------
svn-revision 1139
